<resources>
    <string name="app_name">PetWalk</string>
    <string name="welcome">Bienvenido</string>
    <string name="usuario_input">Correo</string>
    <string name="pass_input">Contraseña</string>
    <string name="btnLog_value">Ingresar</string>
    <string name="btnReg_value">Registrarse</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_send">Mis mascotas</string>
    <string name="menu_gallery">Solicitar Servicio</string>
    <string name="menu_slideshow">Paseos</string>
    <string name="menu_tools">Registrarme como paseador</string>
    <string name="menu_share">Cerrar Sesión</string>
    <string name="form_prov">Registrarme como proveedor</string>
    <string name="example_name">Juan Manuel</string>
    <string name="example_phone">2299000001</string>
    <string name="mail_text">Correo</string>
    <string name="phone_text">Telefono</string>
    <string name="example_mail">example@domain.com</string>
    <string name="example_about_me">Información sobre mí</string>
    <string name="name_text">Nombre Completo</string>
    <string name="pass_text">Contraseña</string>
    <string name="example_pass">Contraseña</string>
    <string name="button_reg_value">Registrarme</string>
    <string name="btn_save">Guardar</string>
    <string name="menu_title">Extras</string>
    <string name="petadd_title">Agregar Mascota</string>
    <string name="add_label">Agregar</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string-array name="razas_array">
        <item>Raza</item>
        <item>Labrador</item>
        <item>Husky</item>
        <item>Bulldog</item>
        <item>Pug</item>
        <item>Pomerania</item>
        <item>Golden</item>
        <item>Poodle</item>
        <item>Pastor Alemán</item>
        <item>Criollo</item>
    </string-array>
    <string-array name="sizes_array">
        <item>Talla</item>
        <item>Mini</item>
        <item>Chico</item>
        <item>Mediano</item>
        <item>Grande</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_splash_">Splash_Activity</string>
</resources>
